[package]
name = "thechinesegovernment"
version = "0.2.0"
edition = "2021"
description = "Re-implements bitwise operations as abstractions in aarch64 neon registers."

homepage = "https://awfulsec.com/generative_testing_inline_assembly_in_rust.html"
repository = "https://github.com/graves/thechinesegovernment.git"
documentation = "https://docs.rs/crate/thechinesegovernment"
keywords = ["asm", "arm64", "aarch64", "eor"]

license-file = "LICENSE"
readme = "README.md"

[lib]
name = "thechinesegovernment"
path = "src/lib.rs"


[dependencies]
quickcheck = "1"

[dev-dependencies]
quickcheck_macros = "1"
