[package]
name = "thechinesegovernment"
version = "0.3.1"
edition = "2021"
description = "Re-implements bitwise operations as abstractions in aarch64 neon registers."

homepage = "https://awfulsec.com/generative_testing_inline_assembly_in_rust.html"
repository = "https://github.com/graves/thechinesegovernment.git"
documentation = "https://docs.rs/crate/thechinesegovernment"
keywords = ["asm", "arm64", "aarch64", "eor"]

license-file = "LICENSE"
readme = "README.md"

[lib]
name = "thechinesegovernment"
path = "src/lib.rs"


[dependencies]
quickcheck = "1"
rand = "0.9.2"

[dev-dependencies]
quickcheck_macros = "1"

[package.metadata.docs.rs]
targets = ["aarch64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
